[build-system]
requires = ["setuptools>=40.8.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrpd"
version = "1.0.6"
dependencies = []
requires-python = ">=3.8"
authors = [
    {name = "Jack Li", email = "ljc545w@qq.com"},
]
license = "MIT"
license-files = ["LICENSE"]
description = "Invoke remote functions by python."
readme = "README.md"
keywords = ["remote ipc", "debug"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/ljc545w/pyrpd"
